--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-setuptools>=44.0.0
-numpy~=1.22.1
+setuptools~=65.0.1
+numpy~=1.23.2
 PyQt5~=5.15.6
 pyqtgraph~=0.12.3
-pillow~=9.0.1
+pillow~=9.2.0
 uedinst>=1.3.3
 tqdm~=4.63
+hdf5plugin~=3.3.1
+h5py~=3.7.0
+psutil~=5.9.1
