--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-setuptools~=65.0.1
-numpy~=1.23.2
+setuptools~=59.6.0
+numpy~=1.22.3
 PyQt5~=5.15.6
 pyqtgraph~=0.12.3
-pillow~=9.2.0
+pillow~=9.0.1
 uedinst>=1.3.3
 tqdm~=4.63
 hdf5plugin~=3.3.1
 h5py~=3.7.0
 psutil~=5.9.1
-fast-histogram~=0.11
+numba~=0.55.2
