--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -44,6 +44,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install numpy wheel
+        python -m pip install numpy wheel pytest
     - name: Unit tests
       run: python -m pytest --pyargs DectrisTools
