--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -45,5 +45,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install numpy wheel pytest
+        python -m pip install git+https://github.com/Siwick-Research-Group/uedinst.git
+        python -m pip install -r requirements.txt
     - name: Unit tests
       run: python -m pytest --pyargs DectrisTools
