--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -1,18 +1,22 @@
-name: PyTest
+name: pytest
 
 on: 
   push:
+    branches:
+      - master
   pull_request:
+    branches:
+      - master
   workflow_dispatch:
 
 jobs:
-  test:
+  pytest:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.8", "3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10"]
 
     steps:
     - name: Check out repository
@@ -49,6 +53,6 @@ jobs:
         python -m pip install -r requirements.txt
         python setup.py install
     - name: Unit tests
-      run: | 
+      run: |
         cd ~
         python -m pytest --pyargs DectrisTools
