--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -1,4 +1,4 @@
-name: PyTest
+name: pytest
 
 on: 
   push:
@@ -53,6 +53,6 @@ jobs:
         python -m pip install -r requirements.txt
         python setup.py install
     - name: Unit tests
-      run: | 
+      run: |
         cd ~
         python -m pytest --pyargs DectrisTools
